--- a/templates/xmlrpc/newMediaObject.jinja
+++ b/templates/xmlrpc/newMediaObject.jinja
@@ -6,7 +6,7 @@
                 <struct>
                     <member>
                         <name>url</name>
-                        <value>https://static.oschina.net/uploads/img/201706/15014619_IQHG.jpg</value>
+                        <value>{{ media_url }}</value>
                     </member>
                 </struct>
             </value>
